--- a/PicaLoop/res/values/strings.xml
+++ b/PicaLoop/res/values/strings.xml
@@ -2,14 +2,12 @@
 <resources>
 
     <string name="app_name">PicaLoop</string>
-    <string name="hello_world">Hello world!</string>
     <string name="action_settings">Settings</string>
+    <string name="action_signoff">Sign off</string>
     <string name="fbLogin_button">Sign up with Facebook</string>
-    <string name="gmailLogin_button">Sign up with Google</string>
+    <string name="googleLogin_button">Sign up with Google</string>
     <string name="pclLogin_button">Sign up using email</string>
-    <string name="gmailpic">gmailpic</string>
-    <string name="btn_logout_from_google">Logout from Google</string>
-    <string name="btn_revoke_access">Revoke Access</string>
+    <string name="googlepic">googlepic</string>
 
 
 </resources>
