--- a/PicaLoop/res/values/strings.xml
+++ b/PicaLoop/res/values/strings.xml
@@ -8,6 +8,7 @@
     <string name="googleLogin_button">Sign up with Google</string>
     <string name="pclLogin_button">Sign up using email</string>
     <string name="googlepic">googlepic</string>
-
+    <string name="title_activity_google_login">GoogleLoginActivity</string>
+    <string name="hello_world">Hello world!</string>
 
 </resources>
