--- a/PicaLoop/res/values/strings.xml
+++ b/PicaLoop/res/values/strings.xml
@@ -5,12 +5,11 @@
     <string name="action_settings">Settings</string>
     <string name="action_signoff">Sign off</string>
     <string name="hello_user">Hello %1$s %2$s!</string>
-    <string name="fbLogin_button">Sign up with Facebook</string>
-    <string name="googleLogin_button">Sign up with Google</string>
-    <string name="pclLogin_button">Sign up using email</string>
+    <string name="fbLogin_button">Sign in with Facebook</string>
+    <string name="googleLogin_button">Sign in with Google</string>
+    <string name="pclLogin_button">Sign in using email</string>
     <string name="googlepic">googlepic</string>
     <string name="title_activity_google_login">GoogleLoginActivity</string>
-    <string name="hello_world">Hello world!</string>
     <string name="title_activity_facebook_login">FacebookLoginActivity</string>
     <string name="facebook_app_id">396946067128069</string>
     <string name="title_activity_user_logged_in">UserLoggedInActivity</string>
