--- a/PicaLoop/res/values/strings.xml
+++ b/PicaLoop/res/values/strings.xml
@@ -18,5 +18,10 @@
     <string name="title_activity_user_profile">UserProfileActivity</string>
     <string name="hello_world">Hello world!</string>
     <string name="title_activity_create_aloop">CreateALoopActivity</string>
+    <string name="title_activity_bar">BarActivity</string>
+    <string name="Auto_Complete_Where_Text">Enter Location Name</string>
+    <string name="bar_icon">bar_icon</string>
+    <string name="User_Comment">Comment</string>
+    <string name="title_activity_loop_details">LoopDetailsActivity</string>
 
 </resources>
