--- a/PicaLoop/res/values/strings.xml
+++ b/PicaLoop/res/values/strings.xml
@@ -21,7 +21,9 @@
     <string name="title_activity_bar">BarActivity</string>
     <string name="Auto_Complete_Where_Text">Enter Location Name</string>
     <string name="bar_icon">bar_icon</string>
+    <string name="bar_image">bar_image</string>
     <string name="User_Comment">Comment</string>
+    <string name="barTextView">Click to Add your images</string>
     <string name="title_activity_loop_details">LoopDetailsActivity</string>
 
 </resources>
