--- a/PicaLoop/res/values/strings.xml
+++ b/PicaLoop/res/values/strings.xml
@@ -15,19 +15,19 @@
     <string name="facebook_app_id">396946067128069</string>
     <string name="fb_user_in">Facebook session is Inactive</string>
     <string name="fb_user_ac">Facebook session is Active</string>
-    <string name="title_activity_user_profile">UserProfileActivity</string>
+    <string name="title_activity_user_profile">User Profile</string>
     <string name="hello_world">Hello world!</string>
-    <string name="title_activity_create_aloop">Select your spots !!</string>
-    <string name="title_activity_bar">BarActivity</string>
+    <string name="title_activity_create_aloop">Select your spots!!</string>
+    <string name="title_activity_bar">Bar Details</string>
     <string name="Location_Text">Enter Location Name</string>
     <string name="bar_icon">bar_icon</string>
     <string name="bar_image">bar_image</string>
     <string name="User_Comment">Comment</string>
     <string name="barTextView">Click to Add your images</string>
-    <string name="title_activity_bar_details">BarDetailsActivity</string>
+    <string name="title_activity_bar_details">Bar Details</string>
     <string name="loop_submit">Go</string>
     <string name="title_activity_loop_view">LoopViewActivity</string>
-    <string name="title_activity_news_feed">NewsFeedActivity</string>
+    <string name="title_activity_news_feed">News Feed</string>
     <string name="title_section1">Section 1</string>
     <string name="title_section2">Section 2</string>
     <string name="title_section3">Section 3</string>
