Fix bug with google login to enable google API to handle users not signed into device or those with play services that need update. Make sign in by email password required. enable full actionbar hidden menu to be visible when navigation drawer is open.

--- a/PicaLoop/res/values/strings.xml
+++ b/PicaLoop/res/values/strings.xml
@@ -28,7 +28,7 @@
     <string name="loop_submit">Go</string>
     <string name="title_activity_loop_view">LoopViewActivity</string>
     <string name="title_activity_news_feed">News Feed</string>
-    <string name="title_section1">Section 1</string>
+    <string name="title_section1">Loop Feed</string>
     <string name="title_section2">Section 2</string>
     <string name="title_section3">Section 3</string>
     <string name="navigation_drawer_open">Open navigation drawer</string>
