--- a/PicaLoop/res/values/strings.xml
+++ b/PicaLoop/res/values/strings.xml
@@ -25,7 +25,15 @@
     <string name="User_Comment">Comment</string>
     <string name="barTextView">Click to Add your images</string>
     <string name="title_activity_loop_details">LoopDetailsActivity</string>
+    <string name="title_bar">Bar</string>
+    <string name="title_food">Restaurant</string>
+    <string name="title_movie">Movie</string>
+    <string name="spot_submit">Next</string>
     <string name="loop_submit">Go</string>
     <string name="title_activity_loop_view">LoopViewActivity</string>
+    <string name="title_activity_loop_detail_view">LoopDetailViewActivity</string>
+    <string name="title_activity_loop_details_view">LoopDetailsViewActivity</string>
+    <string name="title_activity_image_adapter">ImageAdapter</string>
+    <string name="_90dp">90dp</string>
 
 </resources>
