--- a/PicaLoop/res/values/strings.xml
+++ b/PicaLoop/res/values/strings.xml
@@ -2,6 +2,7 @@
 <resources>
 
     <string name="app_name">PicaLoop</string>
+    <string name="action_search">Search</string>
     <string name="action_settings">Settings</string>
     <string name="action_signoff">Sign off</string>
     <string name="action_profile">Profile</string>
@@ -26,13 +27,38 @@
     <string name="barTextView">Click to Add your images</string>
     <string name="title_activity_bar_details">Bar Details</string>
     <string name="loop_submit">Go</string>
-    <string name="title_activity_loop_view">LoopViewActivity</string>
-    <string name="title_activity_news_feed">News Feed</string>
-    <string name="title_section1">Loop Feed</string>
-    <string name="title_section2">Section 2</string>
-    <string name="title_section3">Section 3</string>
+    <string name="title_activity_loop_view">Loop View</string>
+    <string name="title_activity_loop_feed">Loop Feed</string>
+    <string name="feed">Loop Feed</string>
+    <string name="library">Loop Library</string>
+    <string name="explorer">Explore</string>
     <string name="navigation_drawer_open">Open navigation drawer</string>
     <string name="navigation_drawer_close">Close navigation drawer</string>
     <string name="create_a_loop">Create A Loop</string>
-
+    <string name="title_activity_loop_library">Loop Library</string>
+    <string name="spots">Spots</string>
+    <string name="loops">Loops</string>
+    <string name="liked">Liked</string>
+    <string name="loopers_following">Following</string>
+    <string name="loopers_followed">Followers</string>
+    <string name="drawer_open">Slider Menu Opened</string>
+    <string name="drawer_close">Slider Menu Closed</string>
+    
+        <!-- Nav Drawer Menu Items -->
+    <string-array name="nav_drawer_items">
+        <item >Loop Feed</item>
+        <item >Loop Library</item>
+        <item >Explore</item>
+    </string-array>
+    <!-- Nav Drawer List Item Icons -->
+    <!-- Keep them in order as the titles are in -->
+    <array name="nav_drawer_icons">
+        <item>@drawable/ic_inbox_black_48dp</item>
+        <item>@drawable/ic_photo_library_black_48dp</item>
+        <item>@drawable/ic_map_black_48dp</item>
+    </array>
+    
+    <!-- Content Description -->
+    <string name="desc_list_item_icon">Item Icon</string>
+  
 </resources>
