--- a/PicaLoop/res/values/strings.xml
+++ b/PicaLoop/res/values/strings.xml
@@ -1,6 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
-<resources>    
+<resources>
+
     <string name="app_name">PicaLoop</string>
+    <string name="action_search">Search</string>
     <string name="action_settings">Settings</string>
     <string name="action_signoff">Sign off</string>
     <string name="action_profile">Profile</string>
@@ -8,16 +10,16 @@
     <string name="fbLogin_button">Sign in with Facebook</string>
     <string name="googleLogin_button">Sign in with Google</string>
     <string name="pclLogin_button">Sign in using email</string>
-   <string name="profilepic">profilepic</string>
+    <string name="profilepic">profilepic</string>
     <string name="title_activity_google_login">GoogleLoginActivity</string>
     <string name="title_activity_facebook_login">FacebookLoginActivity</string>
     <string name="facebook_app_id">396946067128069</string>
     <string name="fb_user_in">Facebook session is Inactive</string>
     <string name="fb_user_ac">Facebook session is Active</string>
-    <string name="title_activity_user_profile">UserProfileActivity</string>
+    <string name="title_activity_user_profile">User Profile</string>
     <string name="hello_world">Hello world!</string>
-    <string name="title_activity_create_aloop">Select your spots !!</string>
-    <string name="title_activity_bar">BarActivity</string>
+    <string name="title_activity_create_aloop">Select your spots!!</string>
+    <string name="title_activity_bar">Bar Details</string>
     <string name="Location_Text">Enter Location Name</string>
     <string name="bar_icon">bar_icon</string>
     <string name="bar_image">bar_image</string>
@@ -39,17 +41,43 @@
     <string name="title_painting">Art</string>
     <string name="spot_submit">Next</string>
     <string name="loop_submit">Go</string>
-    <string name="title_activity_loop_view">LoopViewActivity</string>
+    <string name="title_activity_loop_view">Loop View</string>
     <string name="title_activity_loop_detail_view">LoopDetailViewActivity</string>
     <string name="title_activity_loop_details_view">LoopDetailsViewActivity</string>
     <string name="title_activity_image_adapter">ImageAdapter</string>
-    <string name="title_activity_news_feed">News Feed</string>
-    <string name="title_section1">Loop Feed</string>
-    <string name="title_section2">Section 2</string>
-    <string name="title_section3">Section 3</string>
+    <string name="title_activity_loop_feed">Loop Feed</string>
+    <string name="feed">Loop Feed</string>
+    <string name="library">Loop Library</string>
+    <string name="explorer">Explore</string>
     <string name="navigation_drawer_open">Open navigation drawer</string>
     <string name="navigation_drawer_close">Close navigation drawer</string>
     <string name="create_a_loop">Create A Loop</string>
     <string name="_90dp">90dp</string>
     <color name="white">#FFFFFF</color>
+    <string name="title_activity_loop_library">Loop Library</string>
+    <string name="spots">Spots</string>
+    <string name="loops">Loops</string>
+    <string name="liked">Liked</string>
+    <string name="loopers_following">Following</string>
+    <string name="loopers_followed">Followers</string>
+    <string name="drawer_open">Slider Menu Opened</string>
+    <string name="drawer_close">Slider Menu Closed</string>
+    
+        <!-- Nav Drawer Menu Items -->
+    <string-array name="nav_drawer_items">
+        <item >Loop Feed</item>
+        <item >Loop Library</item>
+        <item >Explore</item>
+    </string-array>
+    <!-- Nav Drawer List Item Icons -->
+    <!-- Keep them in order as the titles are in -->
+    <array name="nav_drawer_icons">
+        <item>@drawable/ic_inbox_black_48dp</item>
+        <item>@drawable/ic_photo_library_black_48dp</item>
+        <item>@drawable/ic_map_black_48dp</item>
+    </array>
+    
+    <!-- Content Description -->
+    <string name="desc_list_item_icon">Item Icon</string>
+  
 </resources>
