--- a/PicaLoop/res/values/strings.xml
+++ b/PicaLoop/res/values/strings.xml
@@ -26,8 +26,25 @@
     <string name="User_Comment">Comment</string>
     <string name="barTextView">Click to Add your images</string>
     <string name="title_activity_bar_details">Bar Details</string>
+    <string name="title_activity_loop_details">LoopDetailsActivity</string>
+    <string name="title_bar">Bar</string>
+    <string name="title_food">Restaurant</string>
+    <string name="title_movie">Movie</string>
+    <string name="title_bike">Bike</string>
+    <string name="title_grocery">Grocery</string>
+    <string name="title_water">Water sports</string>
+    <string name="title_hotel">Hotel</string>
+    <string name="title_airport">Airport</string>
+    <string name="title_photo">Photography</string>
+    <string name="title_library">Reading</string>
+    <string name="title_nature">Hiking</string>
+    <string name="title_painting">Art</string>
+    <string name="spot_submit">Next</string>
     <string name="loop_submit">Go</string>
     <string name="title_activity_loop_view">Loop View</string>
+    <string name="title_activity_loop_detail_view">LoopDetailViewActivity</string>
+    <string name="title_activity_loop_details_view">LoopDetailsViewActivity</string>
+    <string name="title_activity_image_adapter">ImageAdapter</string>
     <string name="title_activity_loop_feed">Loop Feed</string>
     <string name="feed">Loop Feed</string>
     <string name="library">Loop Library</string>
@@ -35,6 +52,8 @@
     <string name="navigation_drawer_open">Open navigation drawer</string>
     <string name="navigation_drawer_close">Close navigation drawer</string>
     <string name="create_a_loop">Create A Loop</string>
+    <string name="_90dp">90dp</string>
+    <color name="white">#FFFFFF</color>
     <string name="title_activity_loop_library">Loop Library</string>
     <string name="spots">Spots</string>
     <string name="loops">Loops</string>
